# bcraft

./: CMakeLists.txt  README.md
src/: main.cpp
src/concurrency/: concurrent_queue.hpp  parallel_for.hpp  spinlock.hpp  thread_pool.cpp  thread_pool.hpp
src/core/: actor.hpp  block.hpp  chunk.hpp  chunk_generation.cpp  chunk_generation.hpp  chunk_lighting.cpp  chunk_lighting.hpp  world.cpp  world.hpp
src/display/: FramebufferRenderer.cpp  FramebufferRenderer.hpp
src/rendering/: mesh_buffer_pool.hpp  meshing.hpp  view.hpp
src/rendering/software/: render_constants.hpp  render_target.hpp  software_renderer.hpp  texture_rgba.hpp  warp.hpp
src/utility/: poskey.hpp
